Added endpoints for customer, added some unit tests, updated readme
