# src/swagger.json
@@ -214,10 +214,7 @@
       "type": "object",
       "properties": {
         "discounts": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/Transaction"
-          }
+          "type": "object"
         }
       }
     },
